# parasyte

./: .clang-format  .gitignore  CMakeLists.txt  README.md  flake.nix
docs/: CONTRIBUTE.md
parasyte/docs/: architecture.md
parasyte/src/: main.cpp  test  test.cpp  thrash.cpp
parasyte/src/controller/: Cli.cpp  Cli.hpp  Parasyte.cpp  Parasyte.hpp
parasyte/src/error_handler/: ErrorHandler.hpp
parasyte/src/exploits/: ExploitBase.cpp  ExploitBase.hpp
parasyte/src/network/: NetScanner.cpp  NetScanner.hpp  NetUtils.cpp
parasyte/src/utils/: Logger.hpp  Utils.hpp
payload/: CMakeLists.txt  flake.nix
payload/src/: main.cpp
payload/src/encryption/: Encryptor.cpp  Encryptor.hpp
payload/src/network/: Connection.cpp  Connection.hpp
src/: main.cpp
src/controller/: Cli.hpp  Parasyte.cpp  Parasyte.hpp
src/error_handler/: ErrorHandler.hpp
src/exploits/: ExploitBase.cpp  ExploitBase.hpp
src/network/: NetScanner.cpp  NetScanner.hpp  NetUtils.cpp  NetUtils.hpp  Services.cpp  Services.hpp
src/payload/: PayloadBase.hpp
src/utils/: Logger.cpp  Logger.hpp  Utils.cpp
